[tool.poetry]
name = "web-yt-summary"
version = "0.1.0"
description = ""
authors = ["Richard <getrt1991@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.5"
streamlit = "^1.24.1"
langchain = "^0.0.230"
requests = "^2.31.0"
bs4 = "^0.0.1"
markdownify = "^0.11.6"
openai = "^0.27.8"
tiktoken = "^0.4.0"
regex = "^2023.6.3"
pytube = "^15.0.0"
youtube-transcript-api = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
